--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     </div>
   </div>
 <footer>
-  <h3 class="footer__text">Powered by: <a href="http://dinablaszczak.com" target="_blank">JaS</a></h3>
+  <h3 class="footer__text">Powered by: <a href="http://facebook.com/jallah.sumbo" target="_blank">JaS</a></h3>
 </footer>
 
   <script src="js/script.js"></script>
